<resources>
    <string name="app_name">My Life Coach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Sections</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_switch_view">Switch View</string>
    <string name="action_settings">Settings</string>

    <string name="activity_goal_label">Goal</string>
    <string name="activity_taskmanager_label">Task Manager</string>

    <!-- Edit Goal -->
    <string name="editgoal_title_hint">Enter Title</string>
    <string name="editgoal_description_hint">Enter Description</string>
    <string name="editgoal_location_hint">Add location</string>
    <string name="editgoal_menu_save">Save</string>

    <!-- Error messages -->
    <string name="editgoal_title_error">Please enter a valid title.</string>
    
    <!-- Task Manager -->
    <string name="tm_img_song_description">Song image</string>
    <string name="tm_img_prev_description">Previous song button</string>
    <string name="tm_img_playpause_description">Play/pause song button</string>
    <string name="tm_img_next_description">Next song button</string>

    <string name="tm_timer_default">00:00:00</string>
    <string name="tm_action_cancel">Cancel</string>
    <string name="tm_action_postpone">Postpone</string>
    <string name="tm_action_complete">Complete</string>

</resources>
